Fix overflow issue

--- a/src/containers/App/index.scss
+++ b/src/containers/App/index.scss
@@ -396,3 +396,8 @@ p > a {
 //     font-size: 2em;
 //   }
 // }
+
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
