--- a/src/containers/Common/Footer/styles.scss
+++ b/src/containers/Common/Footer/styles.scss
@@ -3,8 +3,8 @@
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
-  margin-left: -15px;
-  margin-right: -15px;
+  // margin-left: -15px;
+  // margin-right: -15px;
 }
 
 .quotes {
