--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -20,8 +20,8 @@
   font-weight: 400;
   font-size: 1em;
   line-height: 1.25;
-  margin-right: -15px;
-  margin-left: -15px;
+  // margin-right: -15px;
+  // margin-left: -15px;
   font-family: "Raleway", Calibri, Arial, sans-serif;
   /*background: #333 url('../images/demo-1-bg.jpg') center 0 no-repeat fixed;*/
   background: #333 url(../../assets/images/jGIGWOA.jpg) center 0 repeat fixed;
